Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1633

Impala server GetOperationStatus() should return detail sql error code and message when query fails

    XMLWordPrintableJSON

Details

    Description

      Impala only set the state without setting the error message. We should set the sql error code and error message from the query_status() so that GetOperationStatus() could provide detailed error info.

      Attachments

        Issue Links

          Activity

            People

              twmarshall Thomas Tauber-Marshall
              jyu@cloudera.com Juan Yu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: